--- a/index.html
+++ b/index.html
@@ -53,6 +53,169 @@
 }
 </script>
 
+<meta name="title" content="W.O.L.F. Wellness — Executive Fitness & Performance Coaching">
+<meta name="description" content="Elite personal training, virtual coaching, and holistic wellness for high-performing professionals. Achieve peak physical, mental, and emotional performance.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://wolfwellness.life/">
+<meta property="og:title" content="W.O.L.F. Wellness — Executive Fitness & Performance Coaching">
+<meta property="og:description" content="Elite personal training and wellness coaching designed for busy professionals and high achievers.">
+<meta property="og:image" content="https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://wolfwellness.life/">
+<meta name="twitter:title" content="W.O.L.F. Wellness — Executive Fitness & Performance Coaching">
+<meta name="twitter:description" content="Customized coaching for strength, recovery, and performance.">
+<meta name="twitter:image" content="https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "W.O.L.F. Wellness",
+  "url": "https://wolfwellness.life",
+  "logo": "https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png",
+  "description": "Elite personal training and holistic wellness coaching for high-performing professionals. Virtual and in-person programs focused on performance, recovery, and mindset.",
+  "sameAs": [
+    "https://www.linkedin.com/company/wolfwellness",
+    "https://www.instagram.com/wolfwellness",
+    "https://www.facebook.com/wolfwellness"
+  ],
+  "founder": {
+    "@type": "Person",
+    "name": "Founder, W.O.L.F. Wellness",
+    "description": "Certified personal trainer and executive performance coach specializing in strength, mindset, and recovery systems."
+  },
+  "makesOffer": [
+    {
+      "@type": "Service",
+      "name": "Virtual Personal Training & Wellness Coaching",
+      "description": "Two 30-minute Zoom sessions per week, with custom training, nutrition guidance, and stress management strategies.",
+      "areaServed": "Global",
+      "serviceType": "Holistic Personal Training and Coaching"
+    },
+    {
+      "@type": "Service",
+      "name": "Lifestyle & Executive Wellness Program",
+      "description": "Comprehensive 1:1 program focusing on peak performance, recovery, and mental resilience for high-achieving professionals.",
+      "areaServed": "Global",
+      "serviceType": "Executive Performance Coaching"
+    }
+  ],
+  "knowsAbout": ["performance optimization", "executive fitness", "stress management", "sleep quality", "resilience training", "holistic wellness"],
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://wolfwellness.life/"
+  },
+  "hasPart": [
+    {
+      "@type": "Article",
+      "headline": "The High-Performer’s Paradox: Why Success Often Sabotages Health",
+      "url": "https://wolfwellness.life/insights-high-performers-paradox.html",
+      "image": "https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80",
+      "author": "W.O.L.F. Wellness",
+      "datePublished": "2025-08-01",
+      "keywords": "executive wellness, stress, leadership, balance"
+    },
+    {
+      "@type": "Article",
+      "headline": "Virtual Coaching for Executives: Achieving Maximum Impact in 30 Minutes",
+      "url": "https://wolfwellness.life/insights-virtual-coaching-executives.html",
+      "image": "https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1600&q=80",
+      "author": "W.O.L.F. Wellness",
+      "datePublished": "2025-09-01",
+      "keywords": "virtual training, high performers, fitness efficiency"
+    },
+    {
+      "@type": "Article",
+      "headline": "The Executive Traveler’s Guide to Energy, Sleep, and Recovery",
+      "url": "https://wolfwellness.life/insights-executive-travel-guide.html",
+      "image": "https://images.unsplash.com/photo-1521295121783-8a321d551ad2?auto=format&fit=crop&w=1600&q=80",
+      "author": "W.O.L.F. Wellness",
+      "datePublished": "2025-09-15",
+      "keywords": "travel performance, sleep optimization, resilience"
+    },
+    {
+      "@type": "Article",
+      "headline": "The Science of Resilience: Building Mental and Physical Strength Under Pressure",
+      "url": "https://wolfwellness.life/insights-science-of-resilience.html",
+      "image": "https://images.unsplash.com/photo-1449247709967-d4461a6a6103?auto=format&fit=crop&w=1600&q=80",
+      "author": "W.O.L.F. Wellness",
+      "datePublished": "2025-10-10",
+      "keywords": "resilience training, stress mastery, executive performance"
+    },
+    {
+      "@type": "Article",
+      "headline": "Precision Recovery: The Secret Weapon of High-Performing Leaders",
+      "url": "https://wolfwellness.life/insights-precision-recovery.html",
+      "image": "https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=1600&q=80",
+      "author": "W.O.L.F. Wellness",
+      "datePublished": "2025-10-20",
+      "keywords": "recovery, sleep, performance longevity"
+    }
+  ]
+}
+</script>
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "W.O.L.F. Wellness",
+  "image": "https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png",
+  "url": "https://wolfwellness.life",
+  "telephone": "+1-305-555-2049",
+  "priceRange": "$$$",
+  "description": "Holistic personal training and executive wellness coaching for professionals in Miami and beyond. Blending fitness, mindset, and lifestyle optimization through personalized virtual and in-person programs.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Downtown Miami Area",
+    "addressLocality": "Miami",
+    "addressRegion": "FL",
+    "postalCode": "33131",
+    "addressCountry": "US"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 25.7617,
+    "longitude": -80.1918
+  },
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+      "opens": "08:00",
+      "closes": "19:00"
+    }
+  ],
+  "areaServed": [
+    {
+      "@type": "City",
+      "name": "Miami"
+    },
+    {
+      "@type": "AdministrativeArea",
+      "name": "Florida"
+    },
+    {
+      "@type": "Place",
+      "name": "Virtual / Global"
+    }
+  ],
+  "sameAs": [
+    "https://www.linkedin.com/company/wolfwellness",
+    "https://www.instagram.com/wolfwellness",
+    "https://www.facebook.com/wolfwellness"
+  ],
+  "serviceType": [
+    "Holistic Personal Training",
+    "Executive Wellness Coaching",
+    "Virtual Fitness & Mindset Coaching",
+    "Performance Optimization Programs"
+  ]
+}
+</script>
+
+
 
 </head>
 <body>
@@ -183,7 +346,6 @@
 <div class="section-divider"></div>
 
 
-<!-- Insights Section -->
 <section id="insights" class="insights">
   <h2>Performance Wellness Library</h2>
   <p class="intro">
@@ -194,22 +356,35 @@
     <article class="insight">
       <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=600&q=80" alt="Professional focused on wellness">
       <h3><a href="insights-high-performers-paradox.html">The High-Performer’s Paradox</a></h3>
-      <p>Discover why achievement often undermines wellbeing — and how to build sustainable success.</p>
+      <p>Why achievement often undermines wellbeing — and how to build sustainable success.</p>
     </article>
 
     <article class="insight">
       <img src="https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=600&q=80" alt="Executive on virtual coaching call">
       <h3><a href="insights-virtual-coaching-executives.html">Virtual Coaching for Executives</a></h3>
-      <p>How 30-minute virtual sessions redefine fitness for busy professionals seeking peak performance.</p>
+      <p>How 30-minute virtual sessions redefine fitness for busy professionals.</p>
     </article>
 
     <article class="insight">
       <img src="https://images.unsplash.com/photo-1521790797524-b2497295b8a0?auto=format&fit=crop&w=600&q=80" alt="Business traveler looking out airplane window">
       <h3><a href="insights-executive-travel-guide.html">The Executive Traveler’s Guide</a></h3>
-      <p>Maintain peak energy and focus while crossing time zones — the system for travel resilience.</p>
+      <p>Maintain peak energy and focus while crossing time zones.</p>
+    </article>
+
+    <article class="insight">
+      <img src="https://images.unsplash.com/photo-1449247709967-d4461a6a6103?auto=format&fit=crop&w=600&q=80" alt="Stormy city skyline at night — resilience under pressure">
+      <h3><a href="insights-science-of-resilience.html">The Science of Resilience</a></h3>
+      <p>Train your nervous system and mindset to turn pressure into performance.</p>
+    </article>
+
+    <article class="insight">
+      <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=600&q=80" alt="Night office — calm focus for recovery">
+      <h3><a href="insights-precision-recovery.html">Precision Recovery</a></h3>
+      <p>Recovery isn’t downtime — it’s your strategic leadership advantage.</p>
     </article>
   </div>
 </section>
+
 
 
 
