--- a/insights-high-performers-paradox.html
+++ b/insights-high-performers-paradox.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://wolfwellness.life/insights-high-performers-paradox.html">
+<meta property="og:title" content="The High-Performer’s Paradox: Why Success Often Sabotages Health">
+<meta property="og:description" content="Discover why achievement often undermines wellbeing — and how to build sustainable success.">
+<meta property="og:image" content="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://wolfwellness.life/insights-high-performers-paradox.html">
+<meta name="twitter:title" content="The High-Performer’s Paradox: Why Success Often Sabotages Health">
+<meta name="twitter:description" content="Build resilience, balance achievement, and sustain wellbeing with W.O.L.F. Wellness.">
+<meta name="twitter:image" content="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The High-Performer’s Paradox | W.O.L.F. Wellness Insights</title>
