--- a/insights-virtual-coaching-executives.html
+++ b/insights-virtual-coaching-executives.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://wolfwellness.life/insights-virtual-coaching-executives.html">
+<meta property="og:title" content="Virtual Coaching for Executives: Achieving Maximum Impact in 30 Minutes">
+<meta property="og:description" content="How 30-minute virtual sessions redefine fitness for busy professionals seeking peak performance.">
+<meta property="og:image" content="https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1600&q=80">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://wolfwellness.life/insights-virtual-coaching-executives.html">
+<meta name="twitter:title" content="Virtual Coaching for Executives: Achieving Maximum Impact in 30 Minutes">
+<meta name="twitter:description" content="Efficiency meets precision. Discover the W.O.L.F. method for virtual executive fitness.">
+<meta name="twitter:image" content="https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1600&q=80">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Virtual Coaching for Executives | W.O.L.F. Wellness Insights</title>
