--- a/insights-executive-travel-guide.html
+++ b/insights-executive-travel-guide.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://wolfwellness.life/insights-executive-travel-guide.html">
+<meta property="og:title" content="The Executive Traveler’s Guide to Energy, Sleep, and Recovery">
+<meta property="og:description" content="Stay sharp, strong, and centered while crossing time zones. Discover W.O.L.F. Wellness’ system for travel resilience.">
+<meta property="og:image" content="https://images.unsplash.com/photo-1521295121783-8a321d551ad2?auto=format&fit=crop&w=1600&q=80">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://wolfwellness.life/insights-executive-travel-guide.html">
+<meta name="twitter:title" content="The Executive Traveler’s Guide to Energy, Sleep, and Recovery">
+<meta name="twitter:description" content="Travel like an elite performer with energy, focus, and recovery systems built for high achievers.">
+<meta name="twitter:image" content="https://images.unsplash.com/photo-1521295121783-8a321d551ad2?auto=format&fit=crop&w=1600&q=80">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Executive Traveler’s Guide to Energy, Sleep, and Recovery | W.O.L.F. Wellness Insights</title>
