--- a/insights-science-of-resilience.html
+++ b/insights-science-of-resilience.html
@@ -17,7 +17,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Science of Resilience | W.O.L.F. Wellness Insights</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="insights.css">
+
   <style>
     body { background-color: #1b1b1b; color: #f5f0e1; font-family: 'Open Sans', sans-serif; margin: 0; }
     .insights-hero { position: relative; text-align: center; color: #fff; }
