--- a/index.html
+++ b/index.html
@@ -391,34 +391,36 @@
 <div class="section-divider"></div>
 
   <!-- Contact Section -->
-  <section class="contact" id="contact">
-    <div class="form-container">
-      <h2>Contact Us</h2>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
-        <div class="form-group">
-          <label for="first-name">First Name</label>
-          <input type="text" id="first-name" name="first-name" required>
-        </div>
-        <div class="form-group">
-          <label for="last-name">Last Name</label>
-          <input type="text" id="last-name" name="last-name" required>
-        </div>
-        <div class="form-group">
-          <label for="email">E-mail</label>
-          <input type="email" id="email" name="_replyto" required>
-        </div>
-        <div class="form-group">
-          <label for="phone">Phone Number</label>
-          <input type="tel" id="phone" name="phone">
-        </div>
-        <div class="form-group">
-          <label for="message">Message</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-        </div>
-        <button type="submit" class="btn-submit">Send Message</button>
-      </form>
-    </div>
-  </section>
+<section id="contact" class="contact-section">
+  <div class="contact-container">
+    <h2 class="contact-title">Start Your Transformation</h2>
+    <p class="contact-subtitle">Reach out to begin your complimentary consultation with W.O.L.F. Wellness.</p>
+
+    <form id="contact-form" action="https://formspree.io/f/xldorlga" method="POST" class="contact-form">
+      <!-- Hidden fields for Formspree handling -->
+      <input type="hidden" name="_subject" value="New Message from W.O.L.F. Wellness Website">
+      <input type="hidden" name="_next" value="https://wolfwellness.life/thank-you.html">
+
+      <div class="form-group">
+        <input type="text" name="name" placeholder="Your Name" required>
+      </div>
+
+      <div class="form-group">
+        <input type="email" name="email" placeholder="Your Email" required>
+      </div>
+
+      <div class="form-group">
+        <textarea name="message" placeholder="Your Message" required></textarea>
+      </div>
+
+      <button type="submit" class="btn-cta">Send Message</button>
+
+      <!-- Success Message Animation -->
+      <p id="success-message" class="success-message">Thank you! We’ll be in touch soon.</p>
+    </form>
+  </div>
+</section>
+
 
 <div class="section-divider"></div>
 
@@ -468,6 +470,25 @@
     }, { threshold: 0.1 });
 
     dividers.forEach(divider => observer.observe(divider));
+  });
+</script>
+
+
+<script>
+  const form = document.getElementById('contact-form');
+  const successMessage = document.getElementById('success-message');
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const formData = new FormData(form);
+    const response = await fetch(form.action, { method: 'POST', body: formData, headers: { 'Accept': 'application/json' } });
+
+    if (response.ok) {
+      form.reset();
+      successMessage.style.display = 'block';
+    } else {
+      alert('There was an issue sending your message. Please try again.');
+    }
   });
 </script>
 
