--- a/index.html
+++ b/index.html
@@ -382,6 +382,12 @@
       <h3><a href="insights-precision-recovery.html">Precision Recovery</a></h3>
       <p>Recovery isn’t downtime — it’s your strategic leadership advantage.</p>
     </article>
+
+    <article class="insight">
+      <img src="https://images.unsplash.com/photo-1517960413843-0aee8e2b3285?auto=format&fit=crop&w=600&q=80" alt="Mature athlete performing a barbell squat">
+      <h3><a href="insights-training-as-you-age.html">Proper Training as You Age</a></h3>
+      <p>Why compound and full-body training keep hormones balanced and body composition optimized.</p>
+    </article>
   </div>
 </section>
 
