--- a/insights-training-as-you-age.html
+++ b/insights-training-as-you-age.html
@@ -7,13 +7,53 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="insights.css">
 
-  <!-- Open Graph / Twitter Meta -->
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="The Power of Proper Training as You Age: Hormonal Balance & Lasting Strength">
-  <meta property="og:description" content="Why compound movements and full-body training become more important with age — for hormones, body composition, and longevity.">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1517960413843-0aee8e2b3285?auto=format&fit=crop&w=1600&q=80">
-  <meta property="og:url" content="https://wolfwellness.life/insights-training-as-you-age.html">
-  <meta name="twitter:card" content="summary_large_image">
+<!-- ✅ W.O.L.F. Wellness SEO + AI Structured Metadata -->
+<meta name="description" content="Discover why proper training becomes even more vital as you age. Learn how compound movements and full-body workouts optimize hormones, enhance strength, and maintain ideal body composition with W.O.L.F. Wellness.">
+
+<!-- Open Graph / Twitter Meta -->
+<meta property="og:type" content="article">
+<meta property="og:title" content="The Power of Proper Training as You Age: Hormonal Balance & Lasting Strength">
+<meta property="og:description" content="Why compound movements and full-body training become more important with age — for hormones, body composition, and longevity.">
+<meta property="og:image" content="https://images.unsplash.com/photo-1517960413843-0aee8e2b3285?auto=format&fit=crop&w=1600&q=80">
+<meta property="og:url" content="https://wolfwellness.life/insights-training-as-you-age.html">
+<meta property="og:site_name" content="W.O.L.F. Wellness">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="The Power of Proper Training as You Age">
+<meta name="twitter:description" content="Learn how compound movements and full-body workouts keep hormones balanced and your body strong as you age.">
+<meta name="twitter:image" content="https://images.unsplash.com/photo-1517960413843-0aee8e2b3285?auto=format&fit=crop&w=1600&q=80">
+
+<!-- JSON-LD Structured Data for Search + AI Discovery -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "The Power of Proper Training as You Age",
+  "description": "Learn why compound movements and full-body workouts are essential for hormonal balance, body composition, and longevity as you age.",
+  "image": "https://images.unsplash.com/photo-1517960413843-0aee8e2b3285?auto=format&fit=crop&w=1600&q=80",
+  "author": {
+    "@type": "Person",
+    "name": "Coach [Your Name]",
+    "url": "https://wolfwellness.life"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "W.O.L.F. Wellness",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020,%202025,%2006_37_59%20PM.png"
+    }
+  },
+  "url": "https://wolfwellness.life/insights-training-as-you-age.html",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://wolfwellness.life/insights-training-as-you-age.html"
+  },
+  "datePublished": "2025-10-26",
+  "dateModified": "2025-10-26"
+}
+</script>
+<!-- ✅ End Metadata -->
+
 </head>
 
 <body>
