--- a/insights-executive-travel-guide.html
+++ b/insights-executive-travel-guide.html
@@ -2,16 +2,41 @@
 <html lang="en">
 <head>
 
+<!-- ✅ W.O.L.F. Wellness SEO + AI Structured Metadata -->
+<meta name="description" content="Travel like an executive athlete. Discover how to stay strong, rested, and optimized on the road — without losing focus or momentum.">
+
 <meta property="og:type" content="article">
+<meta property="og:title" content="The Executive Travel Guide: Staying Fit and Focused on the Road">
+<meta property="og:description" content="Travel doesn’t have to derail your training. Learn strategies for maintaining fitness, energy, and focus while on the move.">
+<meta property="og:image" content="https://images.unsplash.com/photo-1536566482680-fca31930a0bd?auto=format&fit=crop&w=1600&q=80">
 <meta property="og:url" content="https://wolfwellness.life/insights-executive-travel-guide.html">
-<meta property="og:title" content="The Executive Traveler’s Guide to Energy, Sleep, and Recovery">
-<meta property="og:description" content="Stay sharp, strong, and centered while crossing time zones. Discover W.O.L.F. Wellness’ system for travel resilience.">
-<meta property="og:image" content="https://images.unsplash.com/photo-1521295121783-8a321d551ad2?auto=format&fit=crop&w=1600&q=80">
+<meta property="og:site_name" content="W.O.L.F. Wellness">
+
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://wolfwellness.life/insights-executive-travel-guide.html">
-<meta name="twitter:title" content="The Executive Traveler’s Guide to Energy, Sleep, and Recovery">
-<meta name="twitter:description" content="Travel like an elite performer with energy, focus, and recovery systems built for high achievers.">
-<meta name="twitter:image" content="https://images.unsplash.com/photo-1521295121783-8a321d551ad2?auto=format&fit=crop&w=1600&q=80">
+<meta name="twitter:title" content="The Executive Travel Guide: Staying Fit and Focused on the Road">
+<meta name="twitter:description" content="Elite travel wellness for high performers. Maintain strength, recovery, and mental sharpness anywhere.">
+<meta name="twitter:image" content="https://images.unsplash.com/photo-1536566482680-fca31930a0bd?auto=format&fit=crop&w=1600&q=80">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "The Executive Travel Guide: Staying Fit and Focused on the Road",
+  "description": "Discover how to sustain performance, fitness, and resilience while traveling as a high-performing professional.",
+  "image": "https://images.unsplash.com/photo-1536566482680-fca31930a0bd?auto=format&fit=crop&w=1600&q=80",
+  "author": { "@type": "Person", "name": "Coach Christopher Estevez", "url": "https://wolfwellness.life" },
+  "publisher": {
+    "@type": "Organization",
+    "name": "W.O.L.F. Wellness",
+    "logo": { "@type": "ImageObject", "url": "https://wolfwellness.life/WOLF%20Wellness%20Logo.png" }
+  },
+  "url": "https://wolfwellness.life/insights-executive-travel-guide.html",
+  "datePublished": "2025-09-20",
+  "dateModified": "2025-09-20"
+}
+</script>
+<!-- ✅ End Metadata -->
+
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
