--- a/insights-high-performers-paradox.html
+++ b/insights-high-performers-paradox.html
@@ -2,16 +2,41 @@
 <html lang="en">
 <head>
 
+<!-- ✅ W.O.L.F. Wellness SEO + AI Structured Metadata -->
+<meta name="description" content="Explore why top performers risk burnout — and how structure, recovery, and alignment fuel sustainable excellence.">
+
 <meta property="og:type" content="article">
+<meta property="og:title" content="The High-Performer’s Paradox: When Drive Becomes the Obstacle">
+<meta property="og:description" content="Why ambition without recovery can stall success — and how elite coaching restores balance and clarity.">
+<meta property="og:image" content="https://images.unsplash.com/photo-1579758629939-037fdd6bfb4b?auto=format&fit=crop&w=1600&q=80">
 <meta property="og:url" content="https://wolfwellness.life/insights-high-performers-paradox.html">
-<meta property="og:title" content="The High-Performer’s Paradox: Why Success Often Sabotages Health">
-<meta property="og:description" content="Discover why achievement often undermines wellbeing — and how to build sustainable success.">
-<meta property="og:image" content="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80">
+<meta property="og:site_name" content="W.O.L.F. Wellness">
+
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://wolfwellness.life/insights-high-performers-paradox.html">
-<meta name="twitter:title" content="The High-Performer’s Paradox: Why Success Often Sabotages Health">
-<meta name="twitter:description" content="Build resilience, balance achievement, and sustain wellbeing with W.O.L.F. Wellness.">
-<meta name="twitter:image" content="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80">
+<meta name="twitter:title" content="The High-Performer’s Paradox">
+<meta name="twitter:description" content="Discover the hidden cost of overdrive — and the systems that restore peak clarity and power.">
+<meta name="twitter:image" content="https://images.unsplash.com/photo-1579758629939-037fdd6bfb4b?auto=format&fit=crop&w=1600&q=80">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "The High-Performer’s Paradox: When Drive Becomes the Obstacle",
+  "description": "How to balance ambition, recovery, and precision to achieve lasting performance.",
+  "image": "https://images.unsplash.com/photo-1579758629939-037fdd6bfb4b?auto=format&fit=crop&w=1600&q=80",
+  "author": { "@type": "Person", "name": "Coach Christopher Estevez", "url": "https://wolfwellness.life" },
+  "publisher": {
+    "@type": "Organization",
+    "name": "W.O.L.F. Wellness",
+    "logo": { "@type": "ImageObject", "url": "https://wolfwellness.life/WOLF%20Wellness%20Logo.png" }
+  },
+  "url": "https://wolfwellness.life/insights-high-performers-paradox.html",
+  "datePublished": "2025-09-10",
+  "dateModified": "2025-09-10"
+}
+</script>
+<!-- ✅ End Metadata -->
+
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
