--- a/insights-science-of-resilience.html
+++ b/insights-science-of-resilience.html
@@ -2,16 +2,40 @@
 <html lang="en">
 <head>
 
+<!-- ✅ W.O.L.F. Wellness SEO + AI Structured Metadata -->
+<meta name="description" content="Train your nervous system, refine your mindset, and turn pressure into performance. Explore the science of resilience for leaders.">
+
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://wolfwellness.life/insights-science-of-resilience.html">
 <meta property="og:title" content="The Science of Resilience: Building Mental and Physical Strength Under Pressure">
-<meta property="og:description" content="Train your nervous system, refine your mindset, and turn pressure into performance.">
+<meta property="og:description" content="Learn how to train your nervous system and mindset to perform under stress — and recover faster.">
 <meta property="og:image" content="https://images.unsplash.com/photo-1449247709967-d4461a6a6103?auto=format&fit=crop&w=1600&q=80">
+<meta property="og:url" content="https://wolfwellness.life/insights-science-of-resilience.html">
+
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://wolfwellness.life/insights-science-of-resilience.html">
-<meta name="twitter:title" content="The Science of Resilience: Building Mental and Physical Strength Under Pressure">
-<meta name="twitter:description" content="Train your nervous system, refine your mindset, and turn pressure into performance.">
+<meta name="twitter:title" content="The Science of Resilience">
+<meta name="twitter:description" content="Resilience isn’t about avoiding stress — it’s mastering state under pressure.">
 <meta name="twitter:image" content="https://images.unsplash.com/photo-1449247709967-d4461a6a6103?auto=format&fit=crop&w=1600&q=80">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "The Science of Resilience: Building Mental and Physical Strength Under Pressure",
+  "description": "A neuroscience-based guide to developing resilience, clarity, and composure under stress.",
+  "image": "https://images.unsplash.com/photo-1449247709967-d4461a6a6103?auto=format&fit=crop&w=1600&q=80",
+  "author": { "@type": "Person", "name": "Coach Christopher Estevez", "url": "https://wolfwellness.life" },
+  "publisher": {
+    "@type": "Organization",
+    "name": "W.O.L.F. Wellness",
+    "logo": { "@type": "ImageObject", "url": "https://wolfwellness.life/WOLF%20Wellness%20Logo.png" }
+  },
+  "url": "https://wolfwellness.life/insights-science-of-resilience.html",
+  "datePublished": "2025-09-30",
+  "dateModified": "2025-09-30"
+}
+</script>
+<!-- ✅ End Metadata -->
+
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
