--- a/insights-virtual-coaching-executives.html
+++ b/insights-virtual-coaching-executives.html
@@ -2,16 +2,40 @@
 <html lang="en">
 <head>
 
+<!-- ✅ W.O.L.F. Wellness SEO + AI Structured Metadata -->
+<meta name="description" content="Discover how 30-minute virtual training sessions redefine executive fitness — efficiency, focus, and impact without compromise.">
+
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://wolfwellness.life/insights-virtual-coaching-executives.html">
 <meta property="og:title" content="Virtual Coaching for Executives: Achieving Maximum Impact in 30 Minutes">
-<meta property="og:description" content="How 30-minute virtual sessions redefine fitness for busy professionals seeking peak performance.">
+<meta property="og:description" content="How structured 30-minute virtual sessions empower high performers to achieve more with less.">
 <meta property="og:image" content="https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1600&q=80">
+<meta property="og:url" content="https://wolfwellness.life/insights-virtual-coaching-executives.html">
+
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://wolfwellness.life/insights-virtual-coaching-executives.html">
-<meta name="twitter:title" content="Virtual Coaching for Executives: Achieving Maximum Impact in 30 Minutes">
-<meta name="twitter:description" content="Efficiency meets precision. Discover the W.O.L.F. method for virtual executive fitness.">
+<meta name="twitter:title" content="Virtual Coaching for Executives">
+<meta name="twitter:description" content="Efficient, high-impact training for leaders who value precision and performance.">
 <meta name="twitter:image" content="https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1600&q=80">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Virtual Coaching for Executives: Achieving Maximum Impact in 30 Minutes",
+  "description": "A time-optimized coaching model for busy professionals seeking peak performance and vitality.",
+  "image": "https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1600&q=80",
+  "author": { "@type": "Person", "name": "Coach Christopher Estevez", "url": "https://wolfwellness.life" },
+  "publisher": {
+    "@type": "Organization",
+    "name": "W.O.L.F. Wellness",
+    "logo": { "@type": "ImageObject", "url": "https://wolfwellness.life/WOLF%20Wellness%20Logo.png" }
+  },
+  "url": "https://wolfwellness.life/insights-virtual-coaching-executives.html",
+  "datePublished": "2025-09-15",
+  "dateModified": "2025-09-15"
+}
+</script>
+<!-- ✅ End Metadata -->
+
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
