--- a/insights-precision-recovery.html
+++ b/insights-precision-recovery.html
@@ -2,16 +2,40 @@
 <html lang="en">
 <head>
 
+<!-- ✅ W.O.L.F. Wellness SEO + AI Structured Metadata -->
+<meta name="description" content="Discover the science of precision recovery — how strategic rest enhances leadership, performance, and longevity.">
+
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://wolfwellness.life/insights-precision-recovery.html">
 <meta property="og:title" content="Precision Recovery: The Secret Weapon of High-Performing Leaders">
 <meta property="og:description" content="Recovery isn’t downtime — it’s your strategic advantage in leadership and longevity.">
 <meta property="og:image" content="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=1600&q=80">
+<meta property="og:url" content="https://wolfwellness.life/insights-precision-recovery.html">
+
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://wolfwellness.life/insights-precision-recovery.html">
-<meta name="twitter:title" content="Precision Recovery: The Secret Weapon of High-Performing Leaders">
-<meta name="twitter:description" content="Recovery isn’t downtime — it’s your strategic advantage in leadership and longevity.">
+<meta name="twitter:title" content="Precision Recovery for High Performers">
+<meta name="twitter:description" content="Learn how structured recovery elevates performance and resilience for executives.">
 <meta name="twitter:image" content="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=1600&q=80">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Precision Recovery: The Secret Weapon of High-Performing Leaders",
+  "description": "Learn how precision recovery protocols improve clarity, endurance, and long-term leadership performance.",
+  "image": "https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=1600&q=80",
+  "author": { "@type": "Person", "name": "Coach Christopher Estevez", "url": "https://wolfwellness.life" },
+  "publisher": {
+    "@type": "Organization",
+    "name": "W.O.L.F. Wellness",
+    "logo": { "@type": "ImageObject", "url": "https://wolfwellness.life/WOLF%20Wellness%20Logo.png" }
+  },
+  "url": "https://wolfwellness.life/insights-precision-recovery.html",
+  "datePublished": "2025-09-25",
+  "dateModified": "2025-09-25"
+}
+</script>
+<!-- ✅ End Metadata -->
+
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
