--- a/insights-training-as-you-age.html
+++ b/insights-training-as-you-age.html
@@ -32,7 +32,7 @@
   "image": "https://images.unsplash.com/photo-1517960413843-0aee8e2b3285?auto=format&fit=crop&w=1600&q=80",
   "author": {
     "@type": "Person",
-    "name": "Coach [Your Name]",
+    "name": "Coach Christopher Estevez",
     "url": "https://wolfwellness.life"
   },
   "publisher": {
